k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-devops-deployment
spec:
  replicas: 2  # Número de réplicas
  selector:
    matchLabels:
      app: hello-devops
  template:
    metadata:
      labels:
        app: hello-devops
    spec:
      containers:
      - name: hello-devops-container
        image: briancarabantes/hello-devops:latest  
        ports:
        - containerPort: 8080
