k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-devops-service
  namespace: default
spec:
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8080  
  selector:
    app: hello-devops
